--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -322,25 +322,24 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ##   repr_1.1.0               reprex_0.3.0            
 ##   rlang_0.4.6              rmarkdown_2.2           
 ##   rpart_4.1-15             rpf_1.0.4               
-##   rprojroot_1.3.2          rsconnect_0.8.16        
-##   rstudioapi_0.11          rvest_0.3.5             
-##   scales_1.1.1             selectr_0.4.2           
-##   sem_3.1.11               semTools_0.5.3          
-##   skimr_2.1.1              snakecase_0.11.0        
-##   splines_4.0.2            StanHeaders_2.21.0.5    
-##   statmod_1.4.34           stats_4.0.2             
-##   stats4_4.0.2             stringi_1.4.6           
-##   stringr_1.4.0            survival_3.1-12         
-##   sys_3.3                  testthat_2.3.2          
-##   tibble_3.0.1             tidyr_1.1.0             
-##   tidyselect_1.1.0         tidyverse_1.3.0         
-##   tinytex_0.23             tmvnsim_1.0-2           
-##   tools_4.0.2              utf8_1.1.4              
-##   utils_4.0.2              vctrs_0.3.1             
-##   viridis_0.5.1            viridisLite_0.3.0       
-##   whisker_0.4              withr_2.2.0             
-##   xfun_0.14                xml2_1.3.2              
-##   yaml_2.2.1
+##   rprojroot_1.3.2          rstudioapi_0.11         
+##   rvest_0.3.5              scales_1.1.1            
+##   selectr_0.4.2            sem_3.1.11              
+##   semTools_0.5.3           skimr_2.1.1             
+##   snakecase_0.11.0         splines_4.0.2           
+##   StanHeaders_2.21.0.5     statmod_1.4.34          
+##   stats_4.0.2              stats4_4.0.2            
+##   stringi_1.4.6            stringr_1.4.0           
+##   survival_3.1-12          sys_3.3                 
+##   testthat_2.3.2           tibble_3.0.1            
+##   tidyr_1.1.0              tidyselect_1.1.0        
+##   tidyverse_1.3.0          tinytex_0.23            
+##   tmvnsim_1.0-2            tools_4.0.2             
+##   utf8_1.1.4               utils_4.0.2             
+##   vctrs_0.3.1              viridis_0.5.1           
+##   viridisLite_0.3.0        whisker_0.4             
+##   withr_2.2.0              xfun_0.14               
+##   xml2_1.3.2               yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -4662,13 +4661,13 @@ In this chapter we will use summation notation. If you are not familiar with sum
 
 Consider a scenario where we have the IQ data for three participants We use the N symbol to represent the number of participants. Because we have three participants N = 3. The data for these participants is illustrated in Figure \ref{fig:notationdata}.
 
-Notice how each person in the data set can be represent by the variable X. The first person by \(X_1\), the second by \(X_2\), and the third by \(X_3\). Often we refer to individuals in a data set by using the variable X accompanied by a subscript (e.g., 1, 2, 3, etc.).
+Notice how each person in the data set can be represented by the variable X: the first person by \(X_1\), the second by \(X_2\), and the third by \(X_3\). Often we refer to individuals in a data set by using the variable X accompanied by a subscript (e.g., 1, 2, 3, etc.).
 
 \begin{figure}
 \includegraphics[width=0.35\linewidth]{ch_populations/images/screenshot_data_n6} \caption{Data for understanding summation notation}\label{fig:notationdata}
 \end{figure}
 
-Referring to participants using the variable X and subscript is valuable because it can be used in conjunction with the sigma (i.e., \(\Sigma\)) symbol for summation. Consider the example below in which we use the summation notation to indicate that we want to add all the X values (representing IQ) for the participants. We use a lower case \(i\) to represent all possible subscript values. The notation below the \(\Sigma\), \(i\) = 1, indicates that we should start with participant 1. The notation below the \(\Sigma\), N, indicates that we should iterate \(i\) up to the value indicated by N; in this case 3, because there are three participants.
+Referring to participants using the variable X and subscript is valuable because it can be used in conjunction with the sigma (i.e., \(\Sigma\)) symbol for summation. Consider the example below in which we use the summation notation to indicate that we want to add all the X values (representing IQ) for the participants. We use a lower case \(i\) to represent all possible subscript values. The notation, \(i\) = 1, below the \(\Sigma\) symbol indicates that we should start with participant 1. The notation, N, above the \(\Sigma\) symbol indicates that we should iterate \(i\) up to the value indicated by N; in this case 3, because there are three participants.
 
 \[
 \begin{aligned} 
@@ -4688,7 +4687,7 @@ Sometimes, to simplify the notation, the numbers above and below the \(\Sigma\) 
 \end{aligned} 
 \]
 
-The full version of the notation can be used to indicate how a mean is calculated.
+\textbf{Calculating a mean}. The full version of the notation can be used to indicate how a mean is calculated.
 
 \[
 \begin{aligned} 
@@ -4712,7 +4711,7 @@ Likewise, the concise version of the notation can be used to indicate how a mean
 \end{aligned} 
 \]
 
-A common task in statistics is to calculate 1) the squared distance between each person and the mean, and 2) add up those squared differences. This calculation is easily expressed with the full version of the notation.
+\textbf{Calculating squared differences}.A common task in statistics is to calculate 1) the squared difference between each person and the mean, and 2) add up those squared differences. This calculation is easily expressed with the full version of the notation.
 
 \[
 \begin{aligned} 
@@ -4739,11 +4738,11 @@ Likewise, the sum of the squared differences from the mean can be expressed usin
 \hypertarget{population-vs-samples}{%
 \section{Population vs samples}\label{population-vs-samples}}
 
-As we move closer to conducting our own research it is critical to make a distinction between populations and samples. A populations is the complete set of people/animals about which we want to make conclusions. Samples are a subset of the total number of people/animals in the population. In most scenarios it is impractical to work with an entire population and, for practical reasons, we study a subset of the population called a sample.
+As we move closer to conducting our own research it is critical to make a distinction between populations and samples. A population is the complete set of people/animals about which we want to make conclusions. A samples is a subset of the total number of people/animals in the population. In most scenarios it is impractical to work with an entire population and, for practical reasons, we study a subset of the population called a sample.
 
-Researchers, and consumers of research, typically have little interest in making conclusions at the sample level. In general, we care about conclusions that generalize to the population not conclusions that only apply to specific individuals in the sample. Consider the case of COVID-19. Imagine a team of researchers creates a vaccine that they hope creates immunity to COVID-19. We care very little if the immunity only works for the specific individuals in the study. However, we care a great deal with if the immunity works, or is likely to work, for all Canadians or all humans. Thus, we study samples but typically wish to make conclusions that apply to the population.
+Researchers, and consumers of research, typically have little interest in making conclusions at the sample level. In general, we care about conclusions that generalize to the population but not conclusions that only apply to specific individuals in the sample. Consider the case of COVID-19. Imagine a team of researchers creates a vaccine that they hope generates immunity to COVID-19. We care very little if the immunity only works for the specific individuals in the study. However, we care a great deal if the immunity works, or is likely to work, for all Canadians or all humans. Thus, we study samples but typically wish to make conclusions that apply to the population.
 
-Statistic tests are means of helping researchers use sample data to make conclusions at the population level. When we calculate numbers based on all of the people/animals in the population we refer to those numbers as \textbf{parameters}. We calculate numbers based on the people/animals in the sample we refer to those numbers as \textbf{statistics}. In general, statistics are used to estimate parameters.
+Statistic tests are a means of helping researchers use sample data to make conclusions at the population level. When we calculate a number that summarises an attribute of all of the people/animals in the population we refer to it as a \textbf{parameter}.
 
 \hypertarget{a-small-population}{%
 \section{A small population}\label{a-small-population}}
@@ -4753,7 +4752,7 @@ Populations are typically quite large, but, for the purpose or reviewing how we 
 \hypertarget{mean}{%
 \subsection{Mean}\label{mean}}
 
-It can be helpful to create a model of our data such that each observation represents a deviation from a model describing the entire set of observations. That is we can think of our three cookies using the approach:
+It can be helpful to create a model of our data such that each observation represents a deviation from a model describing the entire set of observations. That is we can think of our three cookies using the equation below. The weight of particular cookie is indicated by \(X_i\). An estimate of that cookie's weight is indicated by ``model''. The difference between the model of the cookie's weight and actual cookie's weight is indicated by \(error_i\).
 
 \[
 \begin{aligned} 
@@ -4761,7 +4760,7 @@ X_i &= model + error_i \\
 \end{aligned} 
 \]
 
-We can create a model for our data using many different approaches. A simple model for our data is the mean:
+We can create a model for our data using many different approaches. A simple model for our data is the mean, \(\bar{X}\):
 
 \[
 \begin{aligned} 
@@ -4773,7 +4772,7 @@ We can create a model for our data using many different approaches. A simple mod
 \end{aligned} 
 \]
 
-Then we can think of this ``mean cookie'' our model as:
+Then we can think of this ``mean cookie'',\(\bar{X}\), our model:
 
 \[
 \begin{aligned} 
@@ -4806,15 +4805,15 @@ The mean of the population, \(\bar{X} = 10\), is a parameter that serves as mode
 \hypertarget{variance}{%
 \subsection{Variance}\label{variance}}
 
-Variance is a simple way of calculating how well the model fits our data. We can think of there being a conceptual ``mean cookie'' that describes our data. Then we want to see the extent to which the data differs from our ``mean cookie'' model.
+Variance is a simple way of calculating how well the model fits our data. We can think of there being a conceptual ``mean cookie'' that describes our data.
 
 \begin{figure}
 \includegraphics[width=0.6\linewidth]{ch_populations/images/cookie} \caption{Variance as a fit index for the mean}\label{fig:meancookie}
 \end{figure}
 
-Variance is a simple approach to assessing the fit of the model. With this approach we determine the extent to which data point deviates from our model (our mean cookie), see Figure \ref{fig:meancookie}. The deviation between each data point and the model is referred to as error.
+We want to index the extent to which the model fits our data -- that is, we want to see the extent to which the data differs from our ``mean cookie'' model. Variance is a simple approach to assessing the fit of the model. With this approach we determine the extent to which data point deviates from our model (our mean cookie), see Figure \ref{fig:meancookie}. The deviation between each data point and the model is referred to as error.
 
-\textbf{Why use squared errors?} Error, the extent to the data deviates from the model, is calculated using squared differences. That is, take each data point, subtract the model value, and then square the resulting number (e.g., \((8 - 10)^2 = 4\)). It probably strikes you as an odd choice to square the difference between each data point and the model. Why not just take the difference (e.g., \((8 - 10) = -2\)) or take the absolute difference (e.g., \(|8 - 10|= 2\))? The answer is somewhat complex, but it relates to the more general situation in statistics of trying to find models that minimize error. When we use error as the squared difference it is easier to apply calculus, via derivatives, to calculate a model that minimizes the errors (i.e., obtains the best fit). Long story short, complex statistical reasons, we use squared differs to index error rather than other approaches.
+\textbf{Why use squared errors?} Error, the extent to the data deviates from the model, is calculated using squared differences. That is, take each data point, subtract the model value, and then square the resulting number (e.g., \((8 - 10)^2 = 4\)). It probably strikes you as an odd choice to square the difference between each data point and the model. Why not just take the difference (e.g., \((8 - 10) = -2\)) or take the absolute difference (e.g., \(|8 - 10|= 2\))? The answer is somewhat complex, but it relates to the more general situation in statistics of trying to find models that best fit the data (which occurs by minimizing error). When we use error as the squared difference it is easier to apply calculus, via derivatives, to calculate a model that minimizes the errors (i.e., obtains the best fit). Long story short, for complex statistical reasons, we use squared differences to index error rather than other approaches.
 
 \begin{longtable}[]{@{}lll@{}}
 \toprule
@@ -4827,9 +4826,9 @@ Cookie Mass & Model & Error = Squared Difference\tabularnewline
 \bottomrule
 \end{longtable}
 
-You can see in the table above that we can calculate the squared difference for data points 1 through 3. The squared differences are 4, 0, and 4, respectively. We combine these numbers into a single index by taking an average. This calculation, \((4 + 0 + 4)/3 = 2.67\), tell us the average of the squared deviations from the model is 2.67 grams\(^2\). We refer to the this value as variance.
+You can see in the table above that we can calculate the squared differences for data points 1 through 3. The squared differences are 4, 0, and 4, respectively. We combine these numbers into a single index by taking an average. This calculation, \((4 + 0 + 4)/3 = 2.67\), tell us the average of the squared deviations from the model is 2.67 grams\(^2\). We refer to the this value as variance.
 
-Recall the formula for calculating an average:
+Recall the formula for calculating a mean:
 
 \[
 \begin{aligned} 
@@ -4837,7 +4836,7 @@ Recall the formula for calculating an average:
 \end{aligned} 
 \]
 
-You can see from the formula for variance below that variance is just an average. The average of the squared errors.
+You can see from the formula for variance below that variance is just an mean. Variance is the average of the squared errors.
 
 \[
 \begin{aligned} 
@@ -4851,7 +4850,7 @@ var(X) &= \frac{\sum{(X - \bar{X})^2}}{N}\\
 \end{aligned} 
 \]
 
-\textbf{Variance by any other name}. Variance is used in many places in inferential statistics. Unfortunately, it often goes by other name. Some of those names are listed below.
+\textbf{Variance by any other name}. Variance is used in many places in inferential statistics. Unfortunately, it often goes by other names. Some of those names are listed below.
 
 \begin{longtable}[]{@{}l@{}}
 \toprule
