--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -98,11 +98,13 @@ Statistic tests are a means of helping researchers use sample data to make concl
 
 ## A small population
 
-Populations are typically quite large, but, for the purpose or reviewing how we typically describe populations we focus on a population of just three chocolate chip cookies. We refer to the three cookies as $X_1$, $X_2$, and $X_3$. The cookies have the weights of 8, 10, and 12 grams, respectively. 
+Populations are typically quite large, but, for the purpose of reviewing how we typically describe populations we focus on a population of just three chocolate chip cookies. We refer to the three cookies as $X_1$, $X_2$, and $X_3$. The cookies have the weights of 8, 10, and 12 grams, respectively. 
 
 ### Mean
 
-It can be helpful to create a model of our data such that each observation represents a deviation from a model describing the entire set of observations. That is we can think of our three cookies using the equation below. The weight of particular cookie is indicated by $X_i$. An estimate of that cookie's weight is indicated by "model". The difference between the model of the cookie's weight and actual cookie's weight is indicated by $error_i$.
+It can be helpful to create a model that describes our data. Of course, the model won’t describe every participant perfectly. Each participant will differ to some extent from the model. The  difference between each participant and the model is called error.
+
+Consider a model for our three cookies. The weight of a specific cookie is indicated by $X_i$. An estimate of that cookie's weight is indicated by the "model". The difference between the model of the cookie's weight and actual cookie's weight is indicated by $error_i$.
 
 $$
 \begin{aligned} 
