--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -98,7 +98,7 @@ Statistic tests are a means of helping researchers use sample data to make concl
 
 ## A small population
 
-Populations are typically quite large, but, for the purpose of reviewing how we typically describe populations we focus on a population of just three chocolate chip cookies. We refer to the three cookies as $X_1$, $X_2$, and $X_3$. The cookies have the weights of 8, 10, and 12 grams, respectively. 
+Populations are typically quite large but, for the purpose of reviewing how we typically describe populations, we focus on a population of just three chocolate chip cookies. We refer to the three cookies as $X_1$, $X_2$, and $X_3$. The cookies have the weights of 8, 10, and 12 grams, respectively. 
 
 ### Mean ($\mu$)
 
