--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -322,24 +322,25 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ##   repr_1.1.0               reprex_0.3.0            
 ##   rlang_0.4.6              rmarkdown_2.2           
 ##   rpart_4.1-15             rpf_1.0.4               
-##   rprojroot_1.3.2          rstudioapi_0.11         
-##   rvest_0.3.5              scales_1.1.1            
-##   selectr_0.4.2            sem_3.1.11              
-##   semTools_0.5.3           skimr_2.1.1             
-##   snakecase_0.11.0         splines_4.0.2           
-##   StanHeaders_2.21.0.5     statmod_1.4.34          
-##   stats_4.0.2              stats4_4.0.2            
-##   stringi_1.4.6            stringr_1.4.0           
-##   survival_3.1-12          sys_3.3                 
-##   testthat_2.3.2           tibble_3.0.1            
-##   tidyr_1.1.0              tidyselect_1.1.0        
-##   tidyverse_1.3.0          tinytex_0.23            
-##   tmvnsim_1.0-2            tools_4.0.2             
-##   utf8_1.1.4               utils_4.0.2             
-##   vctrs_0.3.1              viridis_0.5.1           
-##   viridisLite_0.3.0        whisker_0.4             
-##   withr_2.2.0              xfun_0.14               
-##   xml2_1.3.2               yaml_2.2.1
+##   rprojroot_1.3.2          rsconnect_0.8.16        
+##   rstudioapi_0.11          rvest_0.3.5             
+##   scales_1.1.1             selectr_0.4.2           
+##   sem_3.1.11               semTools_0.5.3          
+##   skimr_2.1.1              snakecase_0.11.0        
+##   splines_4.0.2            StanHeaders_2.21.0.5    
+##   statmod_1.4.34           stats_4.0.2             
+##   stats4_4.0.2             stringi_1.4.6           
+##   stringr_1.4.0            survival_3.1-12         
+##   sys_3.3                  testthat_2.3.2          
+##   tibble_3.0.1             tidyr_1.1.0             
+##   tidyselect_1.1.0         tidyverse_1.3.0         
+##   tinytex_0.23             tmvnsim_1.0-2           
+##   tools_4.0.2              utf8_1.1.4              
+##   utils_4.0.2              vctrs_0.3.1             
+##   viridis_0.5.1            viridisLite_0.3.0       
+##   whisker_0.4              withr_2.2.0             
+##   xfun_0.14                xml2_1.3.2              
+##   yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -4664,7 +4665,7 @@ Consider a scenario where we have the IQ data for three participants We use the 
 Notice how each person in the data set can be represented by the variable X: the first person by \(X_1\), the second by \(X_2\), and the third by \(X_3\). Often we refer to individuals in a data set by using the variable X accompanied by a subscript (e.g., 1, 2, 3, etc.).
 
 \begin{figure}
-\includegraphics[width=0.35\linewidth]{ch_populations/images/screenshot_data_n6} \caption{Data for understanding summation notation}\label{fig:notationdata}
+\includegraphics[width=0.4\linewidth]{ch_populations/images/screenshot_data_n6} \caption{Data for understanding summation notation}\label{fig:notationdata}
 \end{figure}
 
 Referring to participants using the variable X and subscript is valuable because it can be used in conjunction with the sigma (i.e., \(\Sigma\)) symbol for summation. Consider the example below in which we use the summation notation to indicate that we want to add all the X values (representing IQ) for the participants. We use a lower case \(i\) to represent all possible subscript values. The notation, \(i\) = 1, below the \(\Sigma\) symbol indicates that we should start with participant 1. The notation, N, above the \(\Sigma\) symbol indicates that we should iterate \(i\) up to the value indicated by N; in this case 3, because there are three participants.
@@ -4687,7 +4688,7 @@ Sometimes, to simplify the notation, the numbers above and below the \(\Sigma\) 
 \end{aligned} 
 \]
 
-\textbf{Calculating a mean}. The full version of the notation can be used to indicate how a mean is calculated.
+\textbf{Calculating a mean}. The full version of the notation can be used to indicate how anb= average/mean is calculated.
 
 \[
 \begin{aligned} 
@@ -4699,7 +4700,7 @@ Sometimes, to simplify the notation, the numbers above and below the \(\Sigma\) 
 \end{aligned} 
 \]
 
-Likewise, the concise version of the notation can be used to indicate how a mean is calculated.
+Likewise, the concise version of the notation can be used to indicate how an average/mean is calculated.
 
 \[
 \begin{aligned} 
@@ -4747,12 +4748,14 @@ Statistic tests are a means of helping researchers use sample data to make concl
 \hypertarget{a-small-population}{%
 \section{A small population}\label{a-small-population}}
 
-Populations are typically quite large, but, for the purpose or reviewing how we typically describe populations we focus on a population of just three chocolate chip cookies. We refer to the three cookies as \(X_1\), \(X_2\), and \(X_3\). The cookies have the weights of 8, 10, and 12 grams, respectively.
+Populations are typically quite large but, for the purpose of reviewing how we typically describe populations, we focus on a population of just three chocolate chip cookies. We refer to the three cookies as \(X_1\), \(X_2\), and \(X_3\). The cookies have the weights of 8, 10, and 12 grams, respectively.
 
-\hypertarget{mean}{%
-\subsection{Mean}\label{mean}}
+\hypertarget{mean-mu}{%
+\subsection{\texorpdfstring{Mean (\(\mu\))}{Mean (\textbackslash mu)}}\label{mean-mu}}
 
-It can be helpful to create a model of our data such that each observation represents a deviation from a model describing the entire set of observations. That is we can think of our three cookies using the equation below. The weight of particular cookie is indicated by \(X_i\). An estimate of that cookie's weight is indicated by ``model''. The difference between the model of the cookie's weight and actual cookie's weight is indicated by \(error_i\).
+It can be helpful to create a model that describes our data. Of course, the model won't describe every participant perfectly. Each participant will differ to some extent from the model. The difference between each participant and the model is called error.
+
+Consider a model for our three cookies. The weight of a specific cookie is indicated by \(X_i\). An estimate of that cookie's weight is indicated by the ``model''. The difference between the model of the cookie's weight and actual cookie's weight is indicated by \(error_i\).
 
 \[
 \begin{aligned} 
@@ -4760,11 +4763,11 @@ X_i &= model + error_i \\
 \end{aligned} 
 \]
 
-We can create a model for our data using many different approaches. A simple model for our data is the mean, \(\bar{X}\):
+We can create a model for our data using many different approaches. A simple model for our data is the mean, \(\mu\):
 
 \[
 \begin{aligned} 
-\bar{X} &= \frac{\sum{X}}{N} \\
+\mu &= \frac{\sum{X}}{N} \\
 &= \frac{X_1 + X_2 + X_3}{3}\\ 
 &= \frac{8 + 10 + 12}{3}\\
 &= \frac{30}{3}\\
@@ -4772,21 +4775,21 @@ We can create a model for our data using many different approaches. A simple mod
 \end{aligned} 
 \]
 
-Then we can think of this ``mean cookie'',\(\bar{X}\), our model:
+Then we can think of this ``mean cookie'', \(\mu\), our model:
 
 \[
 \begin{aligned} 
-X_i &= \bar{X} + error_i \\
+X_i &= \mu + error_i \\
 \end{aligned} 
 \]
 
-The model, above is just concise way of describing the following:
+The model, above is just a concise way of describing the following:
 
 \[
 \begin{aligned} 
-X_1 &= \bar{X} + error_1 \\
-X_2 &= \bar{X} + error_2 \\
-X_3 &= \bar{X} + error_3 \\
+X_1 &= \mu + error_1 \\
+X_2 &= \mu + error_2 \\
+X_3 &= \mu + error_3 \\
 \end{aligned} 
 \]
 
@@ -4800,35 +4803,35 @@ X_3 &= 10 + 2 \\
 \end{aligned} 
 \]
 
-The mean of the population, \(\bar{X} = 10\), is a parameter that serves as model for the data. When we calculate a model for our data, it's helpful to have an index of how well the model fits the data.
+The mean of the population, \(\mu = 10\), is a parameter that serves as model for the data. When we calculate a model for our data, it's helpful to have an index of how well the model fits the data.
 
-\hypertarget{variance}{%
-\subsection{Variance}\label{variance}}
+\hypertarget{variance-sigma2}{%
+\subsection{\texorpdfstring{Variance (\(\sigma^2\))}{Variance (\textbackslash sigma\^{}2)}}\label{variance-sigma2}}
 
-Variance is a simple way of calculating how well the model fits our data. We can think of there being a conceptual ``mean cookie'' that describes our data.
+Variance is a simple way of calculating how well the model fits our data. It is represented by the symbol \(\sigma^2\).
 
 \begin{figure}
 \includegraphics[width=0.6\linewidth]{ch_populations/images/cookie} \caption{Variance as a fit index for the mean}\label{fig:meancookie}
 \end{figure}
 
-We want to index the extent to which the model fits our data -- that is, we want to see the extent to which the data differs from our ``mean cookie'' model. Variance is a simple approach to assessing the fit of the model. With this approach we determine the extent to which data point deviates from our model (our mean cookie), see Figure \ref{fig:meancookie}. The deviation between each data point and the model is referred to as error.
+We want to index the extent to which the model fits our data -- that is, we want to see the extent to which the data differs from our ``mean cookie'' model. Variance is a simple approach to assessing the fit of the model - or more accurately the lack of fit of our model. With this approach we determine the extent to which data point deviates from our model (our mean cookie), see Figure \ref{fig:meancookie}. The deviation between each data point and the model is referred to as error.
 
-\textbf{Why use squared errors?} Error, the extent to the data deviates from the model, is calculated using squared differences. That is, take each data point, subtract the model value, and then square the resulting number (e.g., \((8 - 10)^2 = 4\)). It probably strikes you as an odd choice to square the difference between each data point and the model. Why not just take the difference (e.g., \((8 - 10) = -2\)) or take the absolute difference (e.g., \(|8 - 10|= 2\))? The answer is somewhat complex, but it relates to the more general situation in statistics of trying to find models that best fit the data (which occurs by minimizing error). When we use error as the squared difference it is easier to apply calculus, via derivatives, to calculate a model that minimizes the errors (i.e., obtains the best fit). Long story short, for complex statistical reasons, we use squared differences to index error rather than other approaches.
+\textbf{Why use squared errors?} Error, the extent to which the data deviates from the model, is calculated using squared differences. That is, take each data point, subtract the model value, and then square the resulting number (e.g., \((8 - 10)^2 = 4\)). It probably strikes you as an odd choice to square the difference between each data point and the model. Why not just take the difference (e.g., \((8 - 10) = -2\)) or take the absolute difference (e.g., \(|8 - 10|= 2\))? The answer is somewhat complex, but it relates to the more general situation in statistics of trying to find models that best fit the data (which occurs by minimizing error). When we use error as the squared difference it is easier to apply calculus, via derivatives, to calculate a model that minimizes the errors (i.e., obtains the best fit). Long story short, for complex statistical reasons, we use squared differences to index error rather than other approaches.
 
 \begin{longtable}[]{@{}lll@{}}
 \toprule
 Cookie Mass & Model & Error = Squared Difference\tabularnewline
 \midrule
 \endhead
-\(X_1 = 8\) & \(\bar{X} = 10\) & \((X_1 - \bar{X})^2 =(8 - 10)^2= 4\)\tabularnewline
-\(X_2 = 10\) & \(\bar{X} = 10\) & \((X_2 - \bar{X})^2 =(10 - 10)^2= 0\)\tabularnewline
-\(X_3 = 12\) & \(\bar{X} = 10\) & \((X_3 - \bar{X})^2 =(12 - 10)^2= 4\)\tabularnewline
+\(X_1 = 8\) & \(\mu = 10\) & \((X_1 - \mu)^2 =(8 - 10)^2= 4\)\tabularnewline
+\(X_2 = 10\) & \(\mu = 10\) & \((X_2 - \mu)^2 =(10 - 10)^2= 0\)\tabularnewline
+\(X_3 = 12\) & \(\mu = 10\) & \((X_3 - \mu)^2 =(12 - 10)^2= 4\)\tabularnewline
 \bottomrule
 \end{longtable}
 
-You can see in the table above that we can calculate the squared differences for data points 1 through 3. The squared differences are 4, 0, and 4, respectively. We combine these numbers into a single index by taking an average. This calculation, \((4 + 0 + 4)/3 = 2.67\), tell us the average of the squared deviations from the model is 2.67 grams\(^2\). We refer to the this value as variance.
+You can see in the table above that we can calculate the squared differences for data points 1 through 3. The squared differences are 4, 0, and 4, respectively. We combine these numbers into a single index by taking an average. This calculation, \((4 + 0 + 4)/3 = 2.67\), tells us the average of the squared deviations from the model is 2.67 grams\(^2\). We refer to this value as variance.
 
-Recall the formula for calculating a mean:
+Recall the formula for calculating an avearge:
 
 \[
 \begin{aligned} 
@@ -4836,11 +4839,11 @@ Recall the formula for calculating a mean:
 \end{aligned} 
 \]
 
-You can see from the formula for variance below that variance is just an mean. Variance is the average of the squared errors.
+You can see from the formula for variance below that variance is just an average. Variance is the average of the squared errors.
 
 \[
 \begin{aligned} 
-var(X) &= \frac{\sum{(X - \bar{X})^2}}{N}\\
+\sigma^2 &= \frac{\sum{(X - \bar{X})^2}}{N}\\
 &= \frac{(X_1-\bar{X})^2 + (X_2-\bar{X})^2 + (X_3-\bar{X})^2}{N}  \\ 
 &= \frac{(8-10)^2 + (10-10)^2 + (12-10)^2}{3}\\
 &= \frac{(-2)^2 + (0)^2 (2)^2}{3} \\
@@ -4850,30 +4853,18 @@ var(X) &= \frac{\sum{(X - \bar{X})^2}}{N}\\
 \end{aligned} 
 \]
 
-\textbf{Variance by any other name}. Variance is used in many places in inferential statistics. Unfortunately, it often goes by other names. Some of those names are listed below.
+\emph{Note}: Because we squared the differences the units for variance are also squared. In this case, that means the units for variance are grams\(^2\) not grams.
 
-\begin{longtable}[]{@{}l@{}}
-\toprule
-Variance synonyms\tabularnewline
-\midrule
-\endhead
-Mean Squared Error\tabularnewline
-MSE\tabularnewline
-Pooled variance\tabularnewline
-\(s_{pooled}^2\)\tabularnewline
-\(s_{p}^2\)\tabularnewline
-\(s_{residual}^2\)\tabularnewline
-\bottomrule
-\end{longtable}
+\textbf{Interpretation}. A variance of zero indicates that the model fits the data perfectly. In this case, if the variance was zero, that would indicate that all the cookie had the same mass, exactly 10 grams. To the extent that the variance is larger than zero it implies that the model is not a perfect fit for the data. A large variance indicate that many of the of the data points fall far from the model (i.e., the mean). By implication, the larger variance indicates the larger the differences among the observations (e.g., cookies).
 
-\hypertarget{standard-deviation}{%
-\subsection{Standard Deviation}\label{standard-deviation}}
+\hypertarget{standard-deviation-sigma}{%
+\subsection{\texorpdfstring{Standard Deviation (\(\sigma\))}{Standard Deviation (\textbackslash sigma)}}\label{standard-deviation-sigma}}
 
-Variance is easy to interpret as a the average of the squared differences between the model and the data. However, variance presents an answer in squared units (e.g., 2.67 grams\(2\)). Consequently, some people prefer to take the square root of this value and call it standard deviation.
+Variance is easy to interpret as the average of the squared differences between the model and the data. However, variance presents an answer in squared units (e.g., 2.67 grams\(^2\)). Consequently, some people prefer to take the square root of this value and call it standard deviation; representing it with the symbol \(\sigma\).
 
 \[
 \begin{aligned} 
-sd(X) &= \sqrt{var(X)} \\
+\sigma &= \sqrt{var(X)} \\
 &= \sqrt{2.67} \\
 &= 1.63 grams\\
 \end{aligned} 
@@ -4907,7 +4898,7 @@ Three different ways
 \hypertarget{population-comparisons}{%
 \section{Population comparisons}\label{population-comparisons}}
 
-To facilitate comparing two populations we use the example the heights of males and females - measured in centimeters. There is variability in the heights of both males and females. However, on average, males are taller than females. That is, the mean of the male population is higher than the mean of the female population.
+To facilitate comparing two populations we use the heights of males and females, measured in centimeters, as an example. There is variability in the heights of both males and females. However, on average, males are taller than females. That is, the mean of the male population is higher than the mean of the female population.
 
 In this section we present a large number of hypothetical populations representing the heights of males and females. Each of the following figures contains three scenarios (labeled A, B, C) in which we manipulate the mean height and variability of the populations. In each scenario the standard deviation of heights is the same for the male and female populations.
 
@@ -4917,11 +4908,11 @@ In this section we present a large number of hypothetical populations representi
 \hypertarget{individual-scores}{%
 \subsubsection{Individual scores}\label{individual-scores}}
 
-Often when we compare two means we use the original metric - in the case of the male and female heights that metric is centimeters. The original units are a useful way to convey information about the difference between two populations.
+Often when we compare two means we use the original metric. In the case of the male and female heights that metric is centimeters. The original units are a useful way to convey information about the difference between two populations.
 
-In addition to the original unit metric, however, it is also possible - and sometimes desirable to use the standardized mean difference. The word \emph{standardized} is used to indicate that the comparison is relative to the standard deviation.
+In addition to the original unit metric it is also possible, and sometimes desirable, to use the standardized mean difference. The word \emph{standardized} is used to indicate that the comparison is relative to the standard deviation.
 
-Imagine a population male heights (\(\mu = 170\),\(\sigma = 10\)) from which we have obtained a single individual, Ian, who's height is 185 cm.
+Imagine a population of male heights (\(\mu = 170\), \(\sigma = 10\)) from which we have obtained a single individual, Ian, whose height is 185 cm.
 
 \[
 X_{Ian} = 185cm
@@ -4940,16 +4931,16 @@ z_{Ian} &=  \frac{X_{Ian} - \mu_{males}}{\sigma_{males}}\\
 
 The above calculation is a ratio. Ratios are used to compare two numbers. The numerator (number on the top) is compared to the denominator (number on bottom) through division. The resulting number tells you how much larger the numerator is than the denominator.
 
-In this case, the numerator is the extent to which Ian is taller than the mean height for males (\(X_{Ian} - \mu_{males}\)). This numerator is compared to the denominator -- which is the standard deviation for males (\sigma\_\{males\}). The resulting number is 1.50 which indicates the numerator is 1.50 times larger than the denominator. In other words, Ian is 1.50 standard deviations taller than the average male. This is a standardized score for Ian's height - it expresses the difference between his height and the mean height in standard deviation units.
+In this case, the numerator is the extent to which Ian is taller than the mean height for males (\(X_{Ian} - \mu_{males}\)). This numerator is compared to the denominator -- which is the standard deviation for males (\(\sigma_{males}\)). The resulting number is 1.50 which indicates the numerator is 1.50 times larger than the denominator. In other words, Ian is 1.50 standard deviations taller than the average male. This is a standardized score for Ian's height - it expresses the difference between his height and the mean height in standard deviation units.
 
 \hypertarget{population-means}{%
 \subsubsection{Population means}\label{population-means}}
 
-The same approach to generating standardized scores can be applied to population means. Consider a situation where we have population of male heights (\(\mu = 170\),\(\sigma = 10\)) and a population of female heights (\(\mu = 165\),\(\sigma = 10\)). Notice that both populations have the same standard deviation.
+The same approach to generating standardized scores can be applied to population means. Consider a situation where we have population of male heights (\(\mu = 170\), \(\sigma = 10\)) and a population of female heights (\(\mu = 165\), \(\sigma = 10\)). Notice that both populations have the same standard deviation.
 
-We can calculated a standardized value to compare these heights. This standardized value is called the standardized mean difference (SMD). Alternative, it is also known as Cohen's \(d\) which is represented at the population level with the symbol \(\delta\). Calculation of the standardized mean difference is based on the premise that both populations have the same standard deviation.
+We can calculate a standardized value to compare these heights. This standardized value is called the standardized mean difference (SMD). Alternatively, it is also known as Cohen's \(d\) which is represented at the population level with the symbol \(\delta\). Calculation of the standardized mean difference is based on the premise that both populations have the same standard deviation.
 
-In this calculation the numerator represents the difference between the two population means. The denominator represents the population standard deviation - which is the same for both populations. The resulting division of this ratio reveals that the numerator is 0.50 times as large (i.e., half as large) as the denominator. That is, the difference between the populations is halve as larger as the standard deviation. Therefore, the population mean for males is 0.50 standard deviations larger than the population mean for female; \(\delta = 0.50\):
+In this calculation the numerator represents the difference between the two population means. The denominator represents the population standard deviation - which is the same for both populations. The resulting division of this ratio reveals that the numerator is 0.50 times as large (i.e., half as large) as the denominator. That is, the difference between the populations is half as large as the standard deviation. Therefore, the population mean for males is 0.50 standard deviations larger than the population mean for female; \(\delta = 0.50\):
 
 \[
 \begin{aligned} 
@@ -4963,10 +4954,10 @@ In this calculation the numerator represents the difference between the two popu
 \hypertarget{cohens-d-units}{%
 \subsection{\texorpdfstring{Cohen's \(d\) units}{Cohen's d units}}\label{cohens-d-units}}
 
-Because the metric for the standardized mean difference is the standard deviation it can be easy to interpret if you are unfamiliar with the original units. It is usually a good idea to report difference between populations in both the original units (cm) and standardized units (\(\delta\)). Figure \ref{fig:dex1} illustrates three different population difference scenarios (A through C). The population standard deviation is held constant across the three scenarios. You can see as the difference between the population means increases in raw units - it does the same in \(\delta\) (i.e., Cohen's \(d\)) units. In raw units (i.e., cm), the difference the between the population means for scenarios A through C are 5 cm, 10 cm, and 20 cm, respectively. In standardized units (i.e., standard deviations), the difference the between the population means for scenarios A through C are 0.50 standard deviations, 1.0 standard deviations, and 2.0 standard deviations, respectively. In other words, the population-level Cohen's d-values are 0.50, 1.0, and 2.0 for scenarios A through C.
+Because the metric for the standardized mean difference is the standard deviation it can be easy to interpret if you are unfamiliar with the original units. It is usually a good idea to report difference between populations in both the original units (cm) and standardized units (\(\delta\)). Figure \ref{fig:dex1} illustrates three different population difference scenarios (A through C). The population standard deviation is held constant across the three scenarios. You can see that as the difference between the population means increases in raw units - it does the same in \(\delta\) (i.e., Cohen's \(d\)) units. In raw units (i.e., cm), the difference between the population means for scenarios A through C are 5 cm, 10 cm, and 20 cm, respectively. In standardized units (i.e., standard deviations), the difference the between the population means for scenarios A through C are 0.50 standard deviations, 1.0 standard deviations, and 2.0 standard deviations, respectively. In other words, the population-level Cohen's \(d\)-values are 0.50, 1.0, and 2.0 for scenarios A through C.
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{ch_populations/images/dvalue_ex1} \caption{The difference between two population means can be expressed in the original units as indicated by $\Delta M$. Alternatively, the difference can be expressed using a Standardized Mean Difference (SMD). The SMD index is also know as the population-level $d$-value and is represented by the symbol $\delta$. The SMD is a way of expressing the difference between population means without using the original units. }\label{fig:dex1}
+\includegraphics[width=1\linewidth]{ch_populations/images/dvalue_ex1} \caption{The difference between two population means can be expressed in the original units as indicated by $\Delta M$. Alternatively, the difference can be expressed using a Standardized Mean Difference (SMD). The SMD index is also known as the population-level $d$-value and is represented by the symbol $\delta$. The SMD is a way of expressing the difference between population means without using the original units. }\label{fig:dex1}
 \end{figure}
 
 \hypertarget{cohens-d-advantages}{%
@@ -4990,7 +4981,7 @@ It is important to also look at the original units when interpreting results - n
 \hypertarget{benchmarks}{%
 \subsection{Benchmarks}\label{benchmarks}}
 
-\citep{cohen1988} suggested that the standardized mean difference values of 0.20, 0.50, and 0.80 correspond to the effect size labels of small, medium, and large, respectively. These effect sizes are illustrated in Figure \ref{fig:dex4}. As described in this interesting \href{https://replicationindex.com/2015/09/22/the-statistical-power-of-abnormal-social-psychological-research-a-revew-by-jacob-cohen/}{blog post} these benchmark values came from reviewing a single issue of the \emph{Journal of Abnormal and Social Psychology}. This was a relatively small number of studies - that were prone to publication bias. A recent investigation \citep[see][]{schafer2019meaningfulness} of effect sizes in pre-registered studies, with no publication bias, suggest substantially lower benchmark values.
+Cohen suggested that the standardized mean difference values of 0.20, 0.50, and 0.80 correspond to the effect size labels of small, medium, and large, respectively \citep{cohen1988}. These effect sizes are illustrated in Figure \ref{fig:dex4}. As described in an interesting \href{https://replicationindex.com/2015/09/22/the-statistical-power-of-abnormal-social-psychological-research-a-revew-by-jacob-cohen/}{blog post}, these benchmark values came from reviewing a single issue of the \emph{Journal of Abnormal and Social Psychology}. This was a relatively small number of studies - that were prone to publication bias. A recent investigation \citep[see][]{schafer2019meaningfulness} of effect sizes in pre-registered studies, with no publication bias, suggests substantially lower benchmark values.
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{ch_populations/images/dvalue_ex4} \caption{Cohen's (1988) effect size benchmarks.}\label{fig:dex4}
